# parallel_wave_equation

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  Grid3D.cpp  Grid3D.h  MPIProxy.cpp  MathSolver.cpp  MathSolver.h  README.md  Solver.cpp  Solver.h  build.sh  build_all.sh  build_run_gprof.sh  functions.h  log.h  main.cpp  run.sh  run_cuda.sh  run_omp.sh  run_prof.sh  run_simple.sh  utils.h
bluegene/: make.sh  run.sh  run3.sh  run3_omp.sh  run_omp.sh
cuda/: CMakeLists.txt  build.sh  run.sh
cuda/src/: main.cu
local/: run.sh
mpi-openmp/: CMakeLists.txt
mpi-openmp/src/: MPIProxy.cpp  MPIProxy.h
polus/: make.sh  run.sh  run3.sh
src/: Block.cpp  Block.h  CpuSolver.cpp  CpuSolver.h  CudaSolver.cu  CudaSolver.cuh  CudaSolver.h  Grid3D.cpp  Grid3D.h  MPIProxy.cpp  MPIProxy.h  MathSolver.cpp  MathSolver.h  functions.h  main.cpp  utils.h
